<resources>
    <string name="app_name">SmartHome</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="sign_string">Enter Your House</string>
    <string name="title_activity_rooms2">RoomsActivity2</string>
    <string name="rooms">Rooms</string>
    <string name="lv_room">Living Room</string>
    <string name="devices">Devices</string>
    <string name="light">Light</string>
    <string name="thermostat">Thermostat</string>
    <string name="title_activity_devices2">DevicesActivity2</string>
    <string name="title_activity_devices_setting2">DevicesSettingActivity2</string>
    <string name="light_power">30</string>
    <string name="title_activity_splash2">SplashActivity2</string>
</resources>