<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <ImageView
        android:id="@+id/color_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/background_color"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/e_mail"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/pass_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:hint="@string/pass"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/main_color"
            android:text="@string/sign_string"
            android:textSize="8sp"
            tools:ignore="TouchTargetSizeCheck" />

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>